# lyra

./: .coverage  .gitignore  .pre-commit-config.yaml  100_PERCENT_UX_PARITY_COMPLETE.md  AUTO_SPEC_KIT_IMPLEMENTATION_SUMMARY.md  AUTO_SPEC_KIT_ROLLOUT.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONFLICT_RESOLUTION_REPORT.md  CONTRIBUTING.md  DEEP_RESEARCH_STATUS.md  E2E_TEST_RESULTS.md  EAGER_TOOLS_BENCHMARK_RESULTS.md  EAGER_TOOLS_COMPLETE_REPORT.md  EAGER_TOOLS_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETE_STATUS.md  FINAL_COMPLETE_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_STATUS.md  FINAL_SESSION_REPORT.md  FINAL_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY_2026-05-17.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  HOTFIX_REPORT.md  HOW_TO_ENABLE_RICH_TUI.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  LEGACY_CODE_CLEANUP_CHECKLIST.md  LICENSE  LYRA_AUTO_SPEC_KIT_ULTRA_PLAN.md  LYRA_DEEP_RESEARCH_TEST_RESULTS.md  LYRA_E2E_FINAL_REPORT.md  LYRA_E2E_TEST_PLAN.md  LYRA_EAGER_TOOLS_ULTRA_PLAN.md  (+76 more)
.github/workflows/: ci.yml
.lyra/: interactive_history  sessions.sqlite
.lyra/memory/: reasoning_bank.sqlite
.lyra/plans/: s_05e35d2f7a8267543b63.md  s_1a355f7a75357326965b.md  s_20414d26cce1d1302473.md  s_7bb7c96442b85f61b3a0.md  s_cee9679a26a3f8b7bfc4.md
.lyra/sessions/: 2026-04-24T06-50-21-837919.json  2026-04-26T13-32-43-370026.json  2026-04-26T13-57-00-704802.json  2026-04-26T15-36-09-156364.json  2026-04-26T15-36-47-915494.json  2026-04-26T16-52-34-053194.json  2026-04-26T17-23-56-096082.json  2026-05-09T11-44-44-888822.json  2026-05-09T11-58-07-478458.json  2026-05-09T16-08-27-863058.json  2026-05-10T00-40-38-675248.json  2026-05-10T00-42-43-395471.json  2026-05-10T00-45-52-500013.json  2026-05-10T00-56-17-654167.json  2026-05-10T01-14-17-153245.json  2026-05-10T01-18-19-010918.json  2026-05-10T01-21-29-104418.json  2026-05-10T06-15-30-723641.json  2026-05-11T11-45-23-937659.json  2026-05-11T11-45-41-834266.json  2026-05-12T15-43-19-260503.json  events.jsonl  index.json
.omc/: project-memory.json
.omc/plans/: LYRA_CONTEXT_OPTIMIZATION_PLAN.md  LYRA_STATUS_SYSTEM_PLAN.md
.omc/sessions/: 05a8bac2-57fa-424e-a6c5-699aea30fad8.json  061f1c71-5a94-4a21-aba6-6325d6e076fe.json  (+14 more)
builder-specs/: AUTOSPEC.md  PROMPT.md
docs/: ARCHITECTURE_DIAGRAMS.md  CUSTOM_ANTHROPIC_PROVIDER.md  MCP_INTEGRATION_PLAN.md  MODEL_SELECTION_GUIDE.md  TUI_AUTOCOMPLETE_IMPLEMENTATION_GUIDE.md  TUI_AUTOCOMPLETE_PLAN.md  TUI_AUTOCOMPLETE_PROGRESS.md  architecture-tradeoff.md  architecture.md  benchmarks.md  community-ecosystem.md  feature-parity.md  features.md  index.md  migration-to-lyra.md  novel-ideas.md  research-synthesis-phase-j.md  roadmap-v1.5-v2.md  roadmap.md  skills.md  system-design.md  tdd-discipline.md  threat-model.md  use-cases.md
docs/architecture/: index.md  (+3 more)
examples/: custom_anthropic.py
papers/: README.md
scripts/: install-lyra.sh
site/: 404.html  index.html
test_output/: report_Python_async_patterns_2c535aab.md
test_output_deepseek/: report_874db147-422c-45cd-80dc-52a47d2e09df.txt  report_886b2232-f267-4d43-bdb3-a5aef2c92fda.txt  report_92eddb26-90a9-44a5-89bb-ab7e4923d99e.txt  report_Large_Language_Model_reasoning_capabilities_a36ae574.md  report_Large_Language_Model_reasoning_capabilities_bf0b4354.md
ui-specs/: constitution.md  plan.md  spec.md  tasks.md
(+290 files in other folders)
